@@ -1,48 +1,3 @@
-//java9 module
-//subprojects{
-//  afterEvaluate {
-//    repositories {
-//      mavenLocal()
-//      jcenter()
-//    }
-//
-//    compileJava {
-//      inputs.property("moduleName", moduleName)
-//      doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//        ]
-//        classpath = files()
-//      }
-//    }
-//
-//    compileTestJava {
-//      inputs.property("moduleName", moduleName)
-//      doFirst {
-//        options.compilerArgs = [
-//                '--module-path', classpath.asPath,
-//                '--add-modules', 'junit',
-//                '--add-reads', "$moduleName=junit",
-//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-//        ]
-//        classpath = files()
-//      }
-//    }
-//
-//    test {
-//      inputs.property("moduleName", moduleName)
-//      doFirst {
-//        jvmArgs = [
-//                '--module-path', classpath.asPath,
-//                '--add-modules', 'ALL-MODULE-PATH',
-//                '--add-reads', "$moduleName=junit",
-//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-//        ]
-//        classpath = files()
-//      }
-//    }
-//  }
-//}
 
 subprojects {
   apply plugin: 'com.github.harbby.gradle.serviceloader'
@@ -51,11 +6,13 @@ subprojects {
   }
 
   dependencies {
-    compileOnly project(":sylph-common")
-    compileOnly(project(':sylph-spi')) {
+    compileOnly(project(':sylph-spi'))
+
+    compile(project(":sylph-etl-api"))
+
+    testCompileOnly(project(':sylph-spi')) {
       exclude(module: 'jsr305')
     }
-    compile(project(":sylph-etl-api"))
   }
 
   def modules = project(':sylph-dist').buildDir.path + "/modules/${name}"
